--- a/week8/Week-6-Authentication-master/src/main/webapp/index.html
+++ b/week8/Week-6-Authentication-master/src/main/webapp/index.html
@@ -6,5 +6,10 @@
     </head>
     <body>
         <h1>Hello World!</h1>
+        <p>
+            <a href="./admin.html">Click me for Admin Page</a>
+            <br/><br/>
+            <a href="./user.html">Click me for User Page</a>
+        </p>
     </body>
 </html>
