--- a/week8/Week-6-Authentication-master/src/main/webapp/admin/admin.html
+++ b/week8/Week-6-Authentication-master/src/main/webapp/admin/admin.html
@@ -11,8 +11,8 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>USER PAGE</div>
+        <div>ADMIN PAGE</div>
         <br/>
-        <a href="./index.html">Back to index</a>
+        <a href="../index.html">Back to index</a>
     </body>
 </html>
