I can't get it to work

--- a/week8/Week-6-Authentication-master/src/main/webapp/user/user.html
+++ b/week8/Week-6-Authentication-master/src/main/webapp/user/user.html
@@ -6,13 +6,13 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>User</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div>USER PAGE</div>
         <br/>
-        <a href="../index.html">Back to index</a>
+        <a href="../login.xhtml">Back to index</a>
     </body>
 </html>
